--- a/index.html
+++ b/index.html
@@ -2,13 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
+    <div class="first-block">
+        <div class = "first-container">
+            <div class ="header">
+                <h3 class = "logo">Header Logo</h3>
+                <div class="link-container">
+                    <a>header link one</a>
+                    <a>header link two</a>
+                    <a>header link three</a>
+                </div>
+            </div>
 
+            <div class="second-container">
+                <div class ="title-container">
+                    <h1 class="zero-gap title-text">This website is awesome</h1>
+                    <p class ="zero-gap title-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    <button class="signup">Sign up</button>
+                </div>
+            <img src="/pictures/mountains.jpeg" alt="mountains">
+            </div>
+        </div>
+    </div>
+
+    <div class="second-block">
+        <h3>Some random information.</h3>
+        <div class="boxes">
+            <div class="box1">
+                <img class="images" src="/pictures/dog.jpg">
+                <p>This is a dog</p>
+            </div>
+
+            <div class="box2">
+                <img class="images" src="/pictures/dog.jpg">
+                <p>This is a dog</p>
+            </div>
+
+            <div class="box3">
+                <img class="images" src="/pictures/dog.jpg">
+                <p>This is a dog</p>
+            </div>
+
+            <div class="box4">
+                <img class="images" src="/pictures/dog.jpg">
+                <p>This is a dog</p>
+            </div>
+        </div>
+    </div>
+
+    <div class = "third-block">
+        <p class ="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <div class="author-container">
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
+    </div>
+
+    <div class = "fourth-block">
+        <div class = "blue-box">
+            <div class = "text-box">
+                <h4 class="zero-gap calltoaction">Call to action! It's time!</h4>
+                <p class="zero-gap signupstatement">Sign up for our product by clicking that button right over there!</p>
+            </div>
+
+            <div class="signup-container">
+                <button class = "signup2">Sign up</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
