--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p class ="zero-gap title-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
                     <button class="signup">Sign up</button>
                 </div>
-            <img src="pictures/mountains.jpeg" alt="mountains">
+            <img src="mountains.jpeg" alt="mountains">
             </div>
         </div>
     </div>
@@ -36,22 +36,22 @@
         <h3>Some random information.</h3>
         <div class="boxes">
             <div class="box1">
-                <img class="images" src="pictures/dog.jpg">
+                <img class="images" src="dog.jpg">
                 <p>This is a dog</p>
             </div>
 
             <div class="box2">
-                <img class="images" src="pictures/dog.jpg">
+                <img class="images" src="dog.jpg">
                 <p>This is a dog</p>
             </div>
 
             <div class="box3">
-                <img class="images" src="pictures/dog.jpg">
+                <img class="images" src="dog.jpg">
                 <p>This is a dog</p>
             </div>
 
             <div class="box4">
-                <img class="images" src="pictures/dog.jpg">
+                <img class="images" src="dog.jpg">
                 <p>This is a dog</p>
             </div>
         </div>
